# musiccut

./: .gitignore  INSTALL.md  INSTALL_EN.md  README.md  README_EN.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
.github/workflows/: build.yml
python/person-detector/: main.py  requirements.txt
scripts/: audio_separator.spec  audio_separator_entry.py  build-7z.ps1  build.ps1  build_audio_separator.py  build_person_detector.py  check-deps.ps1  cleanup.ps1  setup.ps1  start-dev.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  database.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  utils.rs
src-tauri/src/audio/: fingerprint.rs  mod.rs  separator.rs
src-tauri/src/commands/: config.rs  detection.rs  fingerprint.rs  library.rs  mod.rs  models.rs  project.rs  system.rs  video.rs
src-tauri/src/detection/: detector.rs  mod.rs
src-tauri/src/video/: ffmpeg.rs  mod.rs
src/components/: MusicSelector.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  Progress.tsx  TimeInput.tsx  Toast.tsx  index.ts
src/i18n/locales/: en.json  zh.json
src/pages/Editor/: index.tsx
src/pages/Projects/: index.tsx
src/pages/Settings/: index.tsx
src/services/: api.ts
src/stores/: editorStore.ts  index.ts  languageStore.ts  modelStore.ts  musicStore.ts  projectStore.ts  systemStore.ts  themeStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: index.ts
